--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "jest": "^25.1.0",
+    "serverless": "^1.67.0",
+    "serverless-cloudflare-workers": "^1.2.0",
     "ts-jest": "^25.2.1",
     "types-cloudflare-worker": "^1.1.2",
     "typescript": "^3.8.3"
