--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "jest": "^25.1.0",
+    "rollup": "^2.2.0",
     "serverless": "^1.67.0",
     "serverless-cloudflare-workers": "^1.2.0",
     "ts-jest": "^25.2.1",
