Adding crawl script that makes use of crawl worker.

--- a/example.env
+++ b/example.env
@@ -1,10 +1,17 @@
 # Complete this environment and save to .env
 
-# Endpoint used to access fetch workers and to deploy crawl worker to.
+# Endpoint used to access and deploy crawl worker to.
 WORKER_URL=https://example.com/url/to/deploy/worker/to
+
+# Credentials used to protect crawl worker endpoint
+ACCESS_CLIENT_ID=access_id
+ACCESS_CLIENT_SECRET=access_secret
 
 # Credentials to allow deploy of Cloudflare crawl worker (`sls deploy -f crawl_worker`)
 CLOUDFLARE_ACCOUNT_ID=account_id
 CLOUDFLARE_ZONE_ID=zone_id
 CLOUDFLARE_AUTH_KEY=auth_key
 CLOUDFLARE_AUTH_EMAIL=email@example.com
+
+# Export environment variables that may be useful for running scripts.
+export WORKER_URL ACCESS_CLIENT_ID ACCESS_CLIENT_SECRET
